feat: streamline matching engine to core specs, removing relational database and websocket dashboard clutter